assets/css/index.css
:root {
  --clr-pry: #484848;
  --clr-accent: #555555;
  --clr-white: #fff;
  --clr-disabled: #cdcbcb;
}
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
body {
  color: var(--clr-white);
  padding: 0;
  margin: 0;
  font-family: "Roboto", sans-serif;
  width: 100vw;
  height: 100vh;
  display: grid;
  place-items: center;
}
/* scrollbars style */
/*Add scroll bar in chrome*/
::-webkit-scrollbar {
  width: 0.6rem;
  border-radius: 0.3rem;
  background: var(--clr-disabled);
}
::-webkit-scrollbar-thumb {
  background: var(--clr-accent);
  -webkit-border-radius: 1ex;
  -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
}
/* main wrapper container */
main {
  width: 95%;
  height: 95%;
  background-color: var(--clr-pry);
  border-radius: 1.5rem;
  padding: 2rem;
  overflow: hidden;
  display: grid;
  grid-template-columns: 7% 1fr;
  grid-template-rows: 10% 1fr;
  grid-gap: 1rem;
  grid-template-areas:
    "header header"
    "nav main";
}
li {
  list-style: none;
}
/* ***************************************** */
/* navigation panel */
nav {
  grid-area: nav;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.sideBar__icon {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 2rem 0;
  border-radius: 50%;
  font-size: 2.5rem;
  cursor: pointer;
}

.sideBar__icon {
  color: var(--clr-disabled);
}
/*except first child*/
.sideBar__icon:nth-child(n + 2):hover,
.sideBar__icon:nth-child(n + 2):focus {
  color: var(--clr-white);
  transform: scale(1.1);
}
/* ***************************************** */
/* search bar */
header {
  grid-area: header;
  width: 100%;
  /* background-color: grey; */

  display: grid;
  grid-template-columns: 8% auto;
  align-items: center;
}
.logo {
  /* background-color: var(--clr-white); */
  font-size: 2.8rem;
  color: var(--clr-pry);
  height: 100%;
  display: grid;
  place-items: center;
}
.logo i {
  background-color: var(--clr-white);
  padding: 1rem;
  border-radius: 50%;
}
#search-form {
  width: 43%;
  position: relative;
  display: flex;
  align-items: center;
}
#search-form > .search {
  width: 100%;

  border: 1px solid var(--clr-white);
  border-radius: 1rem;
  padding: 0.5rem;
  background-color: transparent;
  outline: none;
  font-size: 1.1rem;
  color: var(--clr-white);
}
#search-form > .submit {
  border: none;
  background-color: transparent;
  color: var(--clr-white);
  font-size: 1.4rem;
  position: absolute;
  right: 3%;
  cursor: pointer;
  color: var(--clr-disabled);
}
#search-form > .submit i:hover,
#search-form > .submit i:focus {
  color: var(--clr-white);
  transform: scale(1.1);
}
/* ************************************** */
/* content panel */
#mainPanel {
  grid-area: main;
  width: 97%;
  height: 95%;

  display: grid;
  grid-template-columns: 1fr 1fr;
  overflow: hidden;
  padding: 0.5rem;
}
/*****/
.stationContainer {
  height: 100%;
  display: flex;
  flex-direction: column;
  position: relative;
}
.tags {
  font-size: 0.8rem;
}
.tags::before {
  content: "#";
}

.stationInfo > .stationImg {
  max-width: 90%;
  margin: 0 auto;
  border-radius: 1rem;
  object-fit: cover;
}
.stationInfo > .stationTitle {
  margin-top: 1rem;
  font-weight: 400;
}
.radioButtons {
  position: absolute;
  bottom: 9%;
  width: 100%;
  height: 5rem;
  display: flex;
  align-items: center;
}
.radioButtons > .radioToggle {
  display: flex;
  align-items: center;
  flex-direction: row;
  gap: 2rem;
  justify-content: center;
  width: 100%;
}
.radioToggle i {
  color: var(--clr-disabled);
  font-size: 3rem;
}
.pause {
  font-size: 3.5rem;
}
.radioToggle i:hover {
  opacity: 1;
  color: var(--clr-white);
  transition: all ease-in-out;
}
/* ******************************* */
/* category section */
.category {
  display: grid;
  grid-template-rows: 65% auto;
  grid-gap: 1rem;
}
.categoryContainer {
  max-width: 100%;
  overflow: hidden;
  display: grid;
  grid-template-rows: 10% 18% auto;
  padding: 0.5rem;
  border-radius: 1rem;
  background-color: var(--clr-accent);
  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
}
.categoryTitle {
  font-weight: 400;
  font-size: 1.8rem;
}
.categoryButtons {
  width: 95%;
  margin: 0 auto;
  display: flex;
  flex-direction: row;
  gap: 0.5rem;
  overflow: hidden;
  overflow-x: auto;
  align-items: center;
  -ms-overflow-style: none;
  scrollbar-width: none;
}
/*Add scroll bar in chrome*/
.categoryButtons::-webkit-scrollbar {
  display: none;
}

.categoryButtons > button {
  border: 1px solid var(--clr-white);
  border-radius: 1rem;
  padding: 0.3rem 1rem;
  background-color: transparent;
  color: var(--clr-white);
  font-weight: 500;
  font-size: 1rem;
  cursor: pointer;
}
.categoryButtons > button:hover,
.categoryButtons > button:focus {
  background-color: var(--clr-white);
  color: rgb(85, 83, 83);
}
.categoryWrapper {
  width: 95%;
  height: 20rem;
  margin: 0 auto;
  display: grid;
  grid-template-columns: auto auto auto;
  justify-content: space-around;
  grid-gap: 0.5rem;
  overflow: hidden;
  overflow-y: auto;
  align-items: center;
  -ms-overflow-style: none;
  /* scrollbar-width: none; */
}

.categoryCard {
  width: 14rem;
  height: 20rem;
  /* background-color: grey; */
  display: flex;
  flex-direction: column;
  text-align: center;
}
.categoryCard > img {
  max-width: 100%;
  object-fit: cover;
  border-top-left-radius: 0.275rem;
  border-top-right-radius: 0.275rem;
  cursor: pointer;
  margin-bottom: 0.5rem;
  height: 10rem;
  background-color: var(--clr-disabled);
}

.country {
  font-size: 1.3rem;
  font-weight: 400;
}
.rate {
  font-size: 0.7rem;
  font-weight: 400;
}

/* **************************** */
/* favorites section */
.favoriteSection {
  padding: 0.5rem 0;
  overflow: hidden;
  padding: 0.5rem;
  border-radius: 1rem;
  background-color: var(--clr-accent);
  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
}

.favoriteCardWrapper {
  display: flex;
  height: 12rem;
  padding: 0.5rem 0;
  flex-direction: column;
  gap: 0.5rem;
  overflow: hidden;
  overflow-y: auto;
  -ms-overflow-style: none;

  /* scrollbar-width: none; */
}

.favouriteCard {
  background-color: grey;
  width: 95%;
  height: 3rem;
  margin: 0 auto;
  border-radius: 0.5rem;
  display: flex;
  justify-content: space-between;
  padding: 0.3rem 1rem;
  box-sizing: border-box;
  align-items: center;
}
.favoriteWrapper {
  display: flex;
}
.favoriteWrapper > img {
  width: 2.5rem;
  height: 2.5rem;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
}
.favoriteInfo {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}
.favoriteInfoTitle {
  margin: 0;
  padding: 0;
  font-size: 0.7rem;
  font-weight: 500;
  opacity: 0.8;
  cursor: pointer;
}
.favouriteCard > .favouriteCardPlay {
  cursor: pointer;
}


/* .categoryCard {
  background-color: grey;
  width: 95%;
  height: 3rem;
  margin: 0 auto;
  border-radius: 0.5rem;
  display: flex;
  justify-content: space-between;
  padding: 0.3rem 1rem;
  box-sizing: border-box;
  align-items: center;
  margin-bottom: 0.5rem;
} */

/* <div class="categoryCard">
<div class="cardWrapper">
    <img src="./assets/images/rog.jpg" alt="categoryImg">
    <div class="categoryInfo">
        <h3 class="radioTitle">ROG RADIO</h3>
        <span class="genre">Genre: <span class="genre"></span> </span>
    </div>
</div>
<i class="fas fa-play-circle favouriteCardPlay"></i>
</div> */

